Bug 1493418 - nsThebesFontEnumerator needs to convert font names from UTF-8 (not Latin-1) to UTF-16. r=lsalzman